--- a/css/maintenance.css
+++ b/css/maintenance.css
@@ -187,6 +187,12 @@ html,body{
 	height: 30px;
 	font-size: 18px;
 }
+
+.button-pre {
+	width: 250px;
+	height: 30px;
+	font-size: 18px;
+}
 /*pƒ^ƒO*/
 .toroku1 {
 	padding-right: 20px;
