レイアウト変更中

--- a/css/maintenance.css
+++ b/css/maintenance.css
@@ -205,3 +205,17 @@ html,body{
 	color:red;
 	font-weight: bold;
 }
+
+/*êVãK*/
+/*
+span{
+margin-left:20px ;
+}
+/*p span{
+margin:-0px 0px 0px 0px; 
+}
+*/
+/*
+.anchortextarea{
+margin:10px 0px 0px 0px;
+}*/
