--- a/css/smoothness/jquery-ui-1.9.0.custom.css
+++ b/css/smoothness/jquery-ui-1.9.0.custom.css
@@ -308,7 +308,7 @@
 .ui-icon-grip-solid-horizontal { background-position: -48px -224px; }
 .ui-icon-gripsmall-diagonal-se { background-position: -64px -224px; }
 .ui-icon-grip-diagonal-se { background-position: -80px -224px; }
-
+#ui-datepicker-div{width: 322px;}
 
 /* Misc visuals
 ----------------------------------*/
