--- a/css/maintenance.css
+++ b/css/maintenance.css
@@ -189,7 +189,9 @@
 }
 
 .gyojibutton {
-	margin:0px 565px;
+	margin-left:565px;
+	text-align:center;
+	float:left;
 }
 
 .button-pre {
@@ -226,11 +228,19 @@ padding:10px 0px 0px 20px;
 width:25px
 }
 
-.error{
+.errorgyoji{
 color:#ff0000; 
 font-weight: bold;
 padding-left:300px;
-text-align:left;
+float:left;
+text-align:center;
+}
+.errorkyukanbi{
+color:#ff0000; 
+font-weight: bold;
+padding-left:480px;
+float:left;
+text-align:center;
 }
 
 .errorjs{
