--- a/css/maintenance.css
+++ b/css/maintenance.css
@@ -214,11 +214,8 @@
 
 /*新規*/
 
-span{
-margin:0px 0px 0px 20px ;
-}
-p span{
-margin:0px 0px 0px 0px
+.errortext{
+margin:0px 0px 0px 20px
 }
 
 .anchortextarea{
